--- a/index.html
+++ b/index.html
@@ -26,6 +26,26 @@
             <a href="#" class="header__link link">Пожаловаться</a>
           </div>
         </nav>
+        <nav class="header__menu-sandwich">
+          <input id="header__menu-toggle" type="checkbox" class="header__menu-toggle" />
+          <label class="header__menu-btn" for="header__menu-toggle">
+          <span class="header__btn-logo"></span>
+          </label>
+          <ul class="header__links-sandwich">
+            <li class="header__link-item">
+              <a href="#" class="header__link link">Мечты</a>
+            </li>
+            <li class="header__link-item">
+              <a href="#" class="header__link link">Ожидания</a>
+            </li>
+            <li class="header__link-item">
+              <a href="#" class="header__link link">Реальность</a>
+            </li>
+            <li class="header__link-item">
+              <a href="#" class="header__link link">Пожаловаться</a>
+            </li>
+          </ul>
+        </nav>
       </header>
       <main class="content">
         <section class="title root__content-size">
